[package]
name = "mapper"
version = "0.7.2"
authors = ["Alex Kazik <alex@kazik.de>"]
edition = "2021"
license = "MIT"

[dependencies]
enum-tools = "0.5"
gloo-storage = { version = "0.3" }
serde = { version = "1.0.160", features = ["serde_derive"] }
yew = { version = "0.21", features = ["csr"] }
yew-bootstrap = { version = "0.10", default-features = false }

[build-dependencies]
build = { path = "build" }
anyhow = "1"
databake = "0.2"

[workspace]
members = [
    ".",
    "build",
]
